; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_message.c_redirecting.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_message.c_redirecting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@redir_fd = common dso_local global i32* null, align 8
@p_vfile = common dso_local global i64* null, align 8
@NUL = common dso_local global i64 0, align 8
@redir_reg = common dso_local global i64 0, align 8
@redir_vname = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redirecting() #0 {
  %1 = load i32*, i32** @redir_fd, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %8, label %3

3:                                                ; preds = %0
  %4 = load i64*, i64** @p_vfile, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @NUL, align 8
  %7 = icmp ne i64 %5, %6
  br label %8

8:                                                ; preds = %3, %0
  %9 = phi i1 [ true, %0 ], [ %7, %3 ]
  %10 = zext i1 %9 to i32
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
